<resources>
    <string name="app_name">Demo App</string>
    <string name="url">https://httpbin.org/ip</string>
    <string name="url_hint">Proxy via(https://example.com/envoy/)</string>
    <string name="http_hint">Header1: Value1\n\nhello=there</string>
    <string name="result">Result goes here</string>
    <string name="load">Load</string>
    <string name="msg">Messages go here</string>
    <string name="out">Output goes here</string>
    <string name="nuke_instruction">
        <![CDATA[
        URL.setURLStreamHandlerFactory(engine.createURLStreamHandlerFactory());\n
        \n
        // or\n
        \n
        CronetNetworking.initializeCronetEngine(context, envoyUrl);
        ]]>
    </string>
    <string name="begin_request_msg">Begin to request %1$s</string>

    <string name="run">rerun test sequence</string>
    <string name="direct">\tdirect test</string>
    <string name="http">\thttp test</string>
    <string name="cronet">\tcronet test</string>
    <string name="ech">\tech test</string>
    <string name="masque">\tmasque test</string>
    <string name="ss">\tshadowsocks test</string>
    <string name="hysteria">\thysteria test</string>
    <string name="v2s">\tv2ray srtp test</string>
    <string name="v2w">\tv2ray wechat test</string>
    <string name="snowflake">\tsnowflake test</string>
    <string name="meek">\tmeek test</string>
    <string name="ohttp">\tohttp test</string>
    <string name="auth">\tconcealed auth test</string>
    <string name="success">\tsuccess</string>
    <string name="failure">\tfailure</string>

    <string-array name="http_method">
        <item>GET</item>
        <item>POST</item>
        <item>DELETE</item>
        <item>PATCH</item>
        <item>PUT</item>
        <item>HEAD</item>
        <item>OPTIONS</item>
    </string-array>

    <string-array name="webview_http_method">
        <item>GET</item>
        <item>POST</item>
    </string-array>

</resources>
